2013-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfdoc.[ch], pdfnames.c, spc_pdfm.c: Bug fix: handle pdf:bann,
	pdf:eann, and pdf:ann specials.

2013-08-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Avoid that config.h depends on $enable_build.
	Replace CHO_CHECK_{ZLIB,LIBPNG} => AC_LINK_IFELSE and
	CHO_CHECK_LIBPAPER => KPSE_LIBPAPER.
	Makefile.am: Use $(PAPER_INCLUDES) and (PAPER_LIBS).

2013-08-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* (x)dvipdfm-ann.test: Additional tests.
	* tests/cmr10.{pfb,tfm}, tests/annot.{dvi,tex},
	tests/psfonts.map: Additional test input files.
	* Makefile.am, dvipdfmx.cfg: Adapted.

	Bugfix from Akira:
	* dvi.c, xdvipdfmx.c: May need to append ".dvi" to dvi_filename.
	* xdvipdfmx.c: At the moment dvipdfmx can not read stdin.

2013-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfobj.c (pdf_open): Bugfix: Always set pf->catalog.
	* xbb.c: Use same code to get the .pdf bounding box in dvipdfmx
	and xdvipdfmx.
	* dvi.c: Avoid duplicate page number output, e.g., "[1[1]]".
	* (x)dvipdfmx.test: Add test with image files.
	* tests/image.tex, tests/image.tex: Additional test input files.
	* Makefile.am (EXTRA_DIST, DISTCLEANFILES): More test IO files.
	Define PACKAGE as "dvipdfmx" for kpse_reset_program_name().

2013-07-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Removed diffs between src/ and xsrc/ version of the remaining
	files and moved them to the top-level: cidtype0.c, dvi.c,
	dvipdfmx.c, epdf.c, jpegimage.c, pdfcolor.c, pdfdev.c, pdfdoc.c,
	pdfdraw.c, pdfobj.c, pdfximage.c, spc_pdfm.c, spc_tpic.c,
	tt_cmap.c, type1c.c, xbb.c.
	* Makefile.am: Adapted.

	* jpegimage.c (jpeg_get_density): Bugfix (from xdvipdfmx r108).

2013-07-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tt_aux.c, tt_post.c: Try to avoid a segfault for some broken
	TrueType fonts with 'post' table Version 0x00000000UL or other.

	* unicode.[ch]: Drop '#include "agl.h"' and others.
	* pdffont.c: Add '#include "agl.h"'.
