@@ -1,0 +1,6 @@
+%
+\special{papersize=10cm , 10 true cm}
+
+This is a test.
+
+\bye
