@@ -3,11 +3,11 @@
 # Copyright (C) 2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
-TEXMFCNF=${srcdir}/../kpathsea
-TEXFONTS=${srcdir}/tests:${srcdir}/data
-DVIPDFMXINPUTS=${srcdir}/tests:${srcdir}/data
-TEXPICTS=${srcdir}/tests
-export TEXMFCNF TEXFONTS DVIPDFMXINPUTS TEXPICTS
+TEXMFCNF=$srcdir/../kpathsea
+TEXFONTMAPS="$srcdir/tests;$srcdir/data"
+DVIPDFMXINPUTS="$srcdir/tests;$srcdir/data"
+TEXPICTS=$srcdir/tests
+export TEXMFCNF TEXFONTMAPS DVIPDFMXINPUTS TEXPICTS
 
 failed=
 
@@ -22,7 +22,7 @@ echo "*** xdvipdfmx --help" \
 	|| failed="$failed xdvipdfmx-help"
 
 echo "*** xdvipdfmx -v -o image2.pdf image" && echo \
-	&& ./xdvipdfmx -v -o image2.pdf ${srcdir}/tests/image \
+	&& ./xdvipdfmx -v -o image2.pdf $srcdir/tests/image \
 	&& echo && echo "xdvipdfmx-image tests OK" && echo \
 	|| failed="$failed xdvipdfmx-image"	
 
